Fixed the height of the menu on mobile.

--- a/src/components/menu.module.scss
+++ b/src/components/menu.module.scss
@@ -5,6 +5,7 @@
 
     &.active {
         height: 100vh;
+        height: -webkit-fill-available;
         width: 100%;
         position: fixed;
         top: 0;
