--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -10,6 +10,7 @@
 
     .profilePic {
         border-radius: 50%;
+        width: 100%;
         max-width: 400px;
         display: block;
         margin: 2rem auto;
