--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -34,6 +34,7 @@
 .writingContainer {
     max-width: $pageWidth;
     margin: 100vh auto 0;
+    margin-top: -webkit-fill-available;
 }
 
 .writingHeader {
